# ip-datafeeder

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc  vcpkg.json
cmake/: commands.cmake  common.cmake  compiler.cmake  options.cmake
cmake/package/: FindFmt.cmake  FindSpdlog.cmake
src/: CMakeLists.txt  Config.hh.in  Main.cc
src/common/: CMakeLists.txt  Defs.hh  config.hh.in  platform.hh  utility.hh
src/common/platform/: windows.hh
src/common/stream/: CMakeLists.txt  Wrapper.hh
src/common/stream/ut/: CMakeLists.txt  TestFileReadStream.cc  TestIoStream.cc
src/common/utility/: Platform.hh  Tools.hh
src/json/: CMakeLists.txt  Serializer.cc  Serializer.hh  Token.hh
src/json/ut/: CMakeLists.txt  TestJsonSerializer.cc  TestJsonToken.cc
src/log/: CMakeLists.txt  log.cc  log.hh
src/logger/: CMakeLists.txt  Logger.cc  Logger.hh
src/stream/: CMakeLists.txt  Concepts.hh  FileStream.cc  FileStream.hh  IoStream.hh  Wrapper.hh
src/stream/ut/: CMakeLists.txt  TestFileReadStream.cc  TestIoStream.cc  TestStreamUtils.hh
src/utility/: CMakeLists.txt  Exceptions.hh  Platform.hh  Singleton.hh  Tools.hh
test/: CMakeLists.txt  TestMain.cc
test/json/: CMakeLists.txt
